<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="262dp"
        android:layout_height="41dp"
        android:layout_marginStart="60sp"
        android:layout_marginTop="50sp"
        android:text="@string/name2"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textSize="30sp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="264dp"
        android:layout_height="65dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/number1_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="264dp"
        android:layout_height="65dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/number2_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textColorHint="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus"
            android:layout_width="163dp"
            android:layout_height="67dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:background="@color/light_pink"
            android:text="@string/plus_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="#FAFAFA"
            android:textColorLink="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="166dp"
            android:layout_height="67dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:background="@color/light_pink"
            android:text="@string/minus_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="#FAFAFA"
            android:textColorLink="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/umnoj"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:background="@color/light_pink"
            android:text="@string/umnoj_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="#FAFAFA"
            android:textColorLink="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/del"
            android:layout_width="160dp"
            android:layout_height="67dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:background="@color/light_pink"
            android:text="@string/del_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="#FAFAFA"
            android:textColorLink="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="358dp"
        android:layout_height="46dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="50sp"
        android:hint="@string/result_hint"
        android:textColor="@color/bright_pink"
        android:textSize="30sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="358dp"
        android:layout_height="62dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="50sp"
        android:textColor="@color/black"
        android:background="@color/light_pink"
        android:text="@string/back" />

</LinearLayout>