<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="262dp"
        android:layout_height="41dp"
        android:layout_marginStart="60sp"
        android:layout_marginTop="50sp"
        android:text="@string/name1"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textSize="30sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/button_calc"
        android:layout_marginTop="50sp"
        android:layout_marginStart="60sp"
        android:layout_width="264dp"
        android:layout_height="65dp"
        android:text="@string/name2" />

    <Button
        android:id="@+id/button_mp3"
        android:layout_marginTop="50sp"
        android:layout_marginStart="60sp"
        android:layout_width="264dp"
        android:layout_height="65dp"
        android:text="@string/name3" />

</LinearLayout>